IC-416 Refactor query and openapi to retrieve the correct set of data from db
